# gh-claude

./: .gitignore  .gitmodules  .goreleaser.yaml  .licenseignore  .markdownlint-cli2.yaml  .prettierignore  .prettierrc.yaml  CHANGELOG.md  Makefile  README.md  go.mod  go.sum  main.go  mise.toml  package-lock.json  package.json  policy.example.json  pyproject.toml  tasks.toml  zensical.toml
.claude/: settings.json
.github/: dependabot.yaml
.github/workflows/: add-to-project.yaml  ci.yaml  dependabot-merge.yaml  merge-notice.yaml  merge-review-ack.yaml  merge.yaml  policy.yaml  release.yaml  release.yml  security.yaml
cmd/: auth.go  docs.go  integrity.go  root.go
docs/: index.md  install.md  policy.example.json  policy.json  policy.json.sig  security-policy.md  security.md
docs/cli/: claude.md  claude_completion.md  claude_completion_bash.md  claude_completion_fish.md  claude_completion_powershell.md  claude_completion_zsh.md  claude_login.md  claude_logout.md  claude_status.md  claude_verify.md  claude_version.md
docs/stylesheets/: extra.css
internal/atomicfile/: atomicfile.go
internal/browser/: open.go
internal/integrity/: author.go  author_test.go  check.go  check_test.go  policy.go  policy_test.go  semver.go  semver_test.go  signature.go  signature_test.go  verify.go  verify_test.go
internal/launch/: exec_unix.go  exec_windows.go  launch.go  launch_test.go
internal/store/: backend_darwin.go  backend_darwin_test.go  backend_file.go  backend_other.go  backend_windows.go  onepassword.go  (+3 more)
overrides/: home.html  main.html
tools/: go.mod  go.sum
(+14 files in other folders)
