# Copyright 2026 Bitwise Media Group Ltd.
# SPDX-License-Identifier: MIT

[project]
name = "gh-claude"
version = "0.1.0"
description = "A GitHub CLI extension that launches Claude Code with a temporary, least-privilege GitHub token."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "BitWise Media Group Ltd.", email = "oss@bitwisemedia.uk" }]
dependencies = [
  "zensical>=0.0.46",
]
